# ticket-system-sync

./: .gitignore  Cargo.toml  README.md  mockup  mockup.json
src/: config.rs  main.rs
src/mockup/jira/: add-comment.json  create-ticket.json  update-ticket.json
src/mockup/zammad/: add-comment.json  change-owner.json  change-severity.json  create-ticket.json
src/models/: api_request.rs  assignment.rs  db.rs  jira.rs  jira_webhook.rs  mod.rs  ticketsystem.rs  zammad.rs  zammad_api.rs  zammad_request.rs
