[package]
name = "ticket-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = {version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
clap   = { version = "4.5", features = ["derive", "env"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
uuid =  { version = "1.16.0", features = ["v4"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
anyhow = "1.0.98"
serde_repr = "0.1.20"
serde_path_to_error = "0.1.17"
serde_yaml = "0.9"
